<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/alert_img"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:srcCompat="@tools:sample/avatars"
                    android:contentDescription="@string/alert_dialog_image" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:nextFocusDown="@id/et_hour"
                    android:gravity="center"
                    style="@style/Text.TitleStyle"
                    android:hint="@string/alert_title">
                    <requestFocus/>
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingTop="24dp">

                <EditText
                    android:id="@+id/et_hour"
                    android:layout_width="34dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number"
                    android:nextFocusDown="@id/et_min"
                    android:gravity="center"
                    style="@style/Text.TitleStyle"
                    android:hint="@string/hour"/>

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hour_text"
                    android:paddingTop="12dp"
                    android:paddingEnd="20dp"
                    style="@style/Text.TitleStyle"/>

                <EditText
                    android:id="@+id/et_min"
                    android:layout_width="34dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number"
                    android:nextFocusDown="@id/et_sec"
                    android:gravity="center"
                    style="@style/Text.TitleStyle"
                    android:hint="@string/min"/>

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/min"
                    android:paddingTop="12dp"
                    android:paddingEnd="20dp"
                    style="@style/Text.TitleStyle"/>

                <EditText
                    android:id="@+id/et_sec"
                    android:layout_width="34dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number"
                    android:gravity="center"
                    style="@style/Text.TitleStyle"
                    android:hint="@string/sec"/>

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sec"
                    android:paddingTop="12dp"
                    style="@style/Text.TitleStyle"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingTop="32dp">

                <Button
                    android:id="@+id/cancel_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel_btn"
                    android:layout_marginEnd="20dp"
                    style="@style/Text.TitleStyle"
                    android:textColor="@color/white"/>

                <Button
                    android:id="@+id/add_list_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_btn"
                    android:layout_marginStart="20dp"
                    style="@style/Text.TitleStyle"
                    android:textColor="@color/white"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>