<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_shape_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/thumb_nail"
                android:layout_width="match_parent"
                android:layout_height="190dp"
                tools:srcCompat="@tools:sample/avatars"
                android:contentDescription="@string/alert_dialog_image" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/list_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="20dp"
                        android:textSize="20sp"
                        android:text="@string/alert_title"
                        style="@style/Text.TitleStyle"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:orientation="horizontal">

                        <ToggleButton
                            android:id="@+id/list_like"
                            android:layout_width="27dp"
                            android:layout_height="23dp"
                            android:layout_marginStart="15dp"
                            android:layout_marginTop="20dp"
                            android:layout_marginEnd="10dp"
                            android:background="@drawable/toggle_like"
                            android:textOff=""
                            android:textOn="" />
                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:id="@+id/save_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/_3_20"
                    android:textSize="12sp"
                    style="@style/Text.TitleStyle"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingBottom="10dp"
                    android:paddingTop="4dp">

                    <Button
                        android:id="@+id/start_link"
                        android:layout_width="72dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/go_youtube"
                        style="@style/Text.TitleStyle"
                        android:textColor="@color/white"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:gravity="end"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/remove"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:layout_marginEnd="10dp"
                            app:drawableEndCompat="@drawable/ic_baseline_delete_24" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>


</LinearLayout>